# leure-speed-to-zero

./: .env  .gitattributes  .gitignore  .lefthookrc  .prettierignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Introduction.ipynb  Makefile  README.md  README.txt  TUTORIAL_ADD_REGION_FLAG.md  TUTORIAL_NEW_LEVER.md  TUTORIAL_NEW_SECTOR.md  docker-compose.prod.yml  docker-compose.yml  docker-compose_ref.yml  forestry_growing-stock.numbers  lefthook.yml  main.py  model_config.json  npm-shrinkwrap.json  openapi.json  package-lock.json  package.json  pyproject.toml  quasar.config.ts  requirements.txt  requirements_preprocessing.txt  speed-to-zero.code-workspace
backend/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  FollowUP.md  Makefile  README.md  index.html  main.py  model_config.json  pyproject.toml  requirements.txt  traefik.yaml
backend/.github/workflows/: quality-checks.yml  release-please.yml
backend/_database/pre_processing/: json_routine_Eurostat.py
backend/_database_bkp/pre_processing/: .gitignore  api_routine_Eurostat.py  api_routines_CH.py
backend/backend/: Makefile
backend/backend/src/: main.py
backend/config/: lever_position.json
backend/model/: agriculture_module.py  ammonia_module.py  buildings_module.py  climate_module.py  district_heating_module.py  emissions_module.py  energy_module.py  forestry_module.py  industry_module.py  interactions.py  interactions_localrun.py  lca_module.py  lifestyles_module.py  minerals_module.py  transport_module.py
backend/model/ammonia/: interfaces.py
backend/model/buildings/: interfaces.py  workflows.py
backend/model/common/: auxiliary_functions.py  constant_data_matrix_class.py  data_matrix_class.py  hourly_data_functions.py  io_database.py  (+1 more)
backend/model_bkp/: climate_module.py
backend/src/: main.py
model/: agriculture_module.py  ammonia_module.py  buildings_module.py  climate_module.py  district-heating_module.py  district_heating_module.py  emissions_module.py  forestry_module.py  industry_module.py  industry_module_new.py  interactions.py  interactions_constants.csv  interactions_localrun.py  landuse_module.py  lifestyles_module.py  minerals_module.py  minerals_module_new.py  module-template.py  oil-refinery.py  oilrefinery_module.py  power_module.py  pyproject.toml  requirements.txt  transport_module.py
model/common/: auxiliary_functions.py  constant_data_matrix_class.py  data_matrix_class.py  hourly_data_functions.py  interface_class.py  io_database.py
(+603 files in other folders)
