[project]
name = "pathwaycalc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "matplotlib==3.8.2",
    "pandas==2.1.3",
    "plotly==5.18.0",
    "scipy==1.11.4",
]

[tool.uv.workspace]
members = ["backend-web-rest-api"]
