[project]
name = "pathwaycalc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guilbert Pierre", email = "pierre.guilbert@epfl.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.8.2",
    "pandas==2.1.3",
    "plotly==5.18.0",
    "scipy==1.11.4",
    "fastapi[standard]>=0.115.12",
    "orjson",
    "pydantic-settings>=2.9.1",
]

