[project]
name = "pathwaycalc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guilbert Pierre", email = "pierre.guilbert@epfl.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21,<2",
    "matplotlib==3.8.2",
    "pandas==2.2.3",
    "plotly==5.18.0",
    "scipy==1.15.3",
    "fastapi[standard]>=0.115.12",
    "orjson",
    "pydantic-settings>=2.9.1",
    "fastapi-cache2[redis]>=0.2.2",
    "requests",
    "deepl",
    "pyomo==6.9.5",
    "highspy>=1.12.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
]
