[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guilbert Pierre", email = "pierre.guilbert@epfl.ch" }
]
requires-python = ">=3.11.5"
dependencies = [
    "matplotlib==3.8.2",
    "pandas==2.1.3",
    "plotly==5.18.0",
    "scipy==1.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Point to the correct package directory
[tool.hatch.build.targets.wheel]
packages = ["."]
